--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "express": "~4.13.4",
+    "fs-extra": "^0.30.0",
+    "gulp": "^3.9.1",
+    "gulp-data": "^1.2.1",
+    "gulp-jade": "^1.1.0",
+    "html-pdf": "^2.1.0",
     "jade": "~1.11.0",
     "jsonwebtoken": "^7.1.9",
     "moment": "^2.15.1",
@@ -18,6 +23,7 @@
     "mysql": "^2.11.1",
     "password-hash": "^1.2.2",
     "q": "^1.4.1",
+    "rimraf": "^2.5.4",
     "serve-favicon": "~2.3.0"
   }
 }
